// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component:Button renders size 26 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  colorScheme="primary"
  dataSet={{}}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#FEB027",
      "borderRadius": 14,
      "flexDirection": "row",
      "justifyContent": "center",
      "opacity": 1,
      "paddingBottom": 2,
      "paddingLeft": 12,
      "paddingRight": 12,
      "paddingTop": 2,
    }
  }
>
  <View
    dataSet={{}}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
    test={true}
  >
    <View
      dataSet={{}}
      style={{}}
    >
      <Text
        dataSet={{}}
        numberOfLines={1}
        style={
          {
            "backgroundColor": undefined,
            "color": "#25282D",
            "fontFamily": "Poppins-SemiBold",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "600",
            "letterSpacing": 0.015,
            "lineHeight": 18,
            "textAlign": "left",
            "textDecorationLine": undefined,
          }
        }
      >
        Hello world
      </Text>
    </View>
  </View>
</View>
`;

exports[`component:Button renders size 32 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  colorScheme="primary"
  dataSet={{}}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#FEB027",
      "borderRadius": 14,
      "flexDirection": "row",
      "justifyContent": "center",
      "opacity": 1,
      "paddingBottom": 8,
      "paddingLeft": 12,
      "paddingRight": 12,
      "paddingTop": 8,
    }
  }
>
  <View
    dataSet={{}}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
    test={true}
  >
    <View
      dataSet={{}}
      style={{}}
    >
      <Text
        dataSet={{}}
        numberOfLines={1}
        style={
          {
            "backgroundColor": undefined,
            "color": "#25282D",
            "fontFamily": "Poppins-SemiBold",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "600",
            "letterSpacing": 0.015,
            "lineHeight": 18,
            "textAlign": "left",
            "textDecorationLine": undefined,
          }
        }
      >
        Hello world
      </Text>
    </View>
  </View>
</View>
`;

exports[`component:Button renders size 44 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  colorScheme="primary"
  dataSet={{}}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#FEB027",
      "borderRadius": 14,
      "flexDirection": "row",
      "justifyContent": "center",
      "opacity": 1,
      "paddingBottom": 12,
      "paddingLeft": 12,
      "paddingRight": 12,
      "paddingTop": 12,
    }
  }
>
  <View
    dataSet={{}}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
    test={true}
  >
    <View
      dataSet={{}}
      style={{}}
    >
      <Text
        dataSet={{}}
        numberOfLines={1}
        style={
          {
            "backgroundColor": undefined,
            "color": "#25282D",
            "fontFamily": "Poppins-SemiBold",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "600",
            "letterSpacing": 0.015,
            "lineHeight": 21,
            "textAlign": "left",
            "textDecorationLine": undefined,
          }
        }
      >
        Hello world
      </Text>
    </View>
  </View>
</View>
`;

exports[`component:Button renders size 56 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  colorScheme="primary"
  dataSet={{}}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#FEB027",
      "borderRadius": 14,
      "flexDirection": "row",
      "justifyContent": "center",
      "opacity": 1,
      "paddingBottom": 16,
      "paddingLeft": 12,
      "paddingRight": 12,
      "paddingTop": 16,
    }
  }
>
  <View
    dataSet={{}}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
    test={true}
  >
    <View
      dataSet={{}}
      style={{}}
    >
      <Text
        dataSet={{}}
        numberOfLines={1}
        style={
          {
            "backgroundColor": undefined,
            "color": "#25282D",
            "fontFamily": "Poppins-SemiBold",
            "fontSize": 16,
            "fontStyle": "normal",
            "fontWeight": "600",
            "letterSpacing": 0.001,
            "lineHeight": 24,
            "textAlign": "left",
            "textDecorationLine": undefined,
          }
        }
      >
        Hello world
      </Text>
    </View>
  </View>
</View>
`;

exports[`component:Button renders variant link 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  colorScheme="primary"
  dataSet={{}}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "primary.600",
      "borderRadius": 14,
      "flexDirection": "row",
      "justifyContent": "center",
      "opacity": 1,
      "paddingBottom": 16,
      "paddingLeft": 12,
      "paddingRight": 12,
      "paddingTop": 16,
      "textDecorationLine": "none",
    }
  }
>
  <View
    dataSet={{}}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
    test={true}
  >
    <View
      dataSet={{}}
      style={{}}
    >
      <Text
        dataSet={{}}
        numberOfLines={1}
        style={
          {
            "backgroundColor": undefined,
            "color": "#25282D",
            "fontFamily": "Poppins-SemiBold",
            "fontSize": 16,
            "fontStyle": "normal",
            "fontWeight": "600",
            "letterSpacing": 0.001,
            "lineHeight": 24,
            "textAlign": "left",
            "textDecorationLine": undefined,
          }
        }
      >
        Hello world
      </Text>
    </View>
  </View>
</View>
`;

exports[`component:Button renders variant outlined 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  colorScheme="primary"
  dataSet={{}}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "primary.600",
      "borderRadius": 14,
      "flexDirection": "row",
      "justifyContent": "center",
      "opacity": 1,
      "paddingBottom": 16,
      "paddingLeft": 12,
      "paddingRight": 12,
      "paddingTop": 16,
    }
  }
>
  <View
    dataSet={{}}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
    test={true}
  >
    <View
      dataSet={{}}
      style={{}}
    >
      <Text
        dataSet={{}}
        numberOfLines={1}
        style={
          {
            "backgroundColor": undefined,
            "color": "#25282D",
            "fontFamily": "Poppins-SemiBold",
            "fontSize": 16,
            "fontStyle": "normal",
            "fontWeight": "600",
            "letterSpacing": 0.001,
            "lineHeight": 24,
            "textAlign": "left",
            "textDecorationLine": undefined,
          }
        }
      >
        Hello world
      </Text>
    </View>
  </View>
</View>
`;
